force-app/main/default/objects/Account/fields/Balance_1__c.field-meta.xml
<CustomField>
    <fullName>Balance_1__c</fullName>
    <label>Balance 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>