force-app/main/default/objects/Account/fields/Balance_2__c.field-meta.xml
<CustomField>
    <fullName>Balance_2__c</fullName>
    <label>Balance 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>