force-app/main/default/objects/Account/fields/Testcheck__c.field-meta.xml
<CustomField>
    <fullName>Testcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testcheck</label>
    <type>Checkbox</type>
</CustomField>